# capstone_project

./: .gitignore  README.md  pyproject.toml
src/forest_cover_type_prediction/: cross_validation.py  data.py  nested_cross_validation.py  pipeline.py  train.py
