[tool.poetry]
name = "forest_cover_type_prediction"
version = "0.1.0"
description = ""
authors = ["Stanislav-3 <61240903+Stanislav-3@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pandas = "^1.4.2"
sklearn = "^0.0"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "src.forest_cover_type_prediction.train:train"
make = "src.forest_cover_type_prediction.train:make_submission"
